# quant-projects

./: README.md
Backtester/: CMakeLists.txt  README.md  main.cpp
ExchangeSimulator/: CMakeLists.txt  Exchange.cpp  Exchange.hpp  OrderBook.cpp  OrderBook.hpp  README.md  Trader.hpp  TraderAI.cpp  main.cpp  order.hpp  trade.hpp
ExecutionAlgoSim/: README.md
HestonOptionSim/: CMakeLists.txt  CorrelatedRNG.cpp  CorrelatedRNG.hpp  HestonModel.cpp  HestonModel.hpp  Option.cpp  Option.hpp  README.md  Utils.cpp  Utils.hpp  main.cpp
LOBReplayEngine/: BookSide.cpp  BookSide.hpp  CMakeLists.txt  Event.cpp  Event.hpp  LOB.cpp  LOB.hpp  Order.hpp  Parser.cpp  Parser.hpp  README.md  events.csv  main.cpp  utils.cpp  utils.hpp
LiquidityHeatmapGenerator/: CMakeLists.txt  HeatmapGenerator.cpp  HeatmapGenerator.hpp  OrderBook.cpp  OrderBook.hpp  README.md  main.cpp  orderbook.csv
MarketMakerSim/: CMakeLists.txt  MarketMaker.cpp  MarketMaker.hpp  MarketSimulator.cpp  MarketSimulator.hpp  Order.hpp  README.md  main.cpp  utils.cpp  utils.hpp
OFIAnalyzer/: CMakeLists.txt  Event.cpp  Event.hpp  OrderBook.cpp  OrderBook.hpp  Parser.cpp  README.md  main.cpp  ofi_events.csv  plot_ofi.py  utils.hpp
OptionMarketSim/: Asset.cpp  Asset.hpp  CMakeLists.txt  Option.cpp  Option.hpp  README.md  Trader.cpp  Trader.hpp  Utils.cpp  Utils.hpp  main.cpp  plot_simulation.py
OptionPricer/: CMakeLists.txt  README.md  main.cpp
TickRuleClassifier/: CMakeLists.txt  Parser.cpp  Parser.hpp  README.md  Trade.cpp  Trade.hpp  main.cpp  trades.csv
VWAPCalculator/: CMakeLists.txt  Parser.cpp  Parser.hpp  (+7 more)
(+1 files in other folders)
